TASK-35 completed: bug fixes for overflow scroll and card.component side

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,4 @@
-body {
+.qcg-app {
   background-image: linear-gradient(0deg,rgba(46,111,149,1) 0%,rgba(69,94,137,0.9640231092436975) 26%,rgba(255,255,255,1) 50%);
+  height: 100vh;
 }
