--- a/src/components/navbar/navbar.component.scss
+++ b/src/components/navbar/navbar.component.scss
@@ -1,4 +1,11 @@
 .qcg-navbar {
+    z-index: 999;
+    position: sticky;
+    top: 0;
+    left: 0%;
+    width: 100%;
+    height: 10em;
+
     img {
         width: 120px;
     }
