--- a/src/pages/home/home.page.scss
+++ b/src/pages/home/home.page.scss
@@ -1,9 +1,8 @@
 .qcg-home-page {
     font-size: medium;
-    height:100vh;
+    height: calc(100vh - 10em);
     overflow-y: scroll;
     scroll-behavior: smooth;
-    padding-bottom: 10em;
 
     .home-wrapper {
         background: white;
