--- a/src/pages/rooms/rooms-list/rooms-list.page.scss
+++ b/src/pages/rooms/rooms-list/rooms-list.page.scss
@@ -1,7 +1,7 @@
 .qcg-rooms-list-page {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    height: calc(100vh - 10em);
     overflow-y: scroll;
-    height: 80vh;
 
     .react-tabs {
         background-color: rgb(255, 255, 255);
